fix: Completely hide scrollbar on Windows

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,13 @@
   border: none;
   resize: none;
   overflow-wrap: break-word;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.dynamic-text::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 .dynamic-text:disabled {
